--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/5f32cfdb56.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -29,5 +33,6 @@
   <body>
     <h1>Home</h1>
     <p>Some text</p>
+    <i class="fa-brands fa-instagram"></i>
   </body>
 </html>
