Created and styled the homepage

--- a/index.html
+++ b/index.html
@@ -33,8 +33,13 @@
   </head>
 
   <body>
-    <h1>Home</h1>
-    <p>Some text</p>
-    <i class="fa-brands fa-instagram"></i>
+    <div class="hero">
+      <p>👋 Hi! I am</p>
+      <h1>Nataliia Rekunenko</h1>
+      <h2 class="mb-5">Frontend Developer, based in the Netherlands</h2>
+      <div>
+        <a href="#" class="btn btn-branding">Contact me</a>
+      </div>
+    </div>
   </body>
 </html>
