Created and styled project block on the homepage

--- a/index.html
+++ b/index.html
@@ -41,5 +41,44 @@
         <a href="#" class="btn btn-branding">Contact me</a>
       </div>
     </div>
+    <p class="text-center mt-5 mb-5">
+      Featured Project which my best projects be choice to show
+    </p>
+    <div class="container mb-5">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/ukraine.png" class="img-fluid" alt="Ukraine page" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Ukraine page</h2>
+            <p class="mb-3 text-muted">How i build this page</p>
+            <div class="col">
+              <i class="fa-solid fa-link"></i> <a href="#"> Life preview</a>
+            </div>
+            <div class="col">
+              <i class="fa-brands fa-github"></i> <a href="#"> View code</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Weather App</h2>
+            <p class="mb-3 text-muted">How i build this app</p>
+            <div class="col">
+              <i class="fa-solid fa-link"></i> <a href="#"> Life preview</a>
+            </div>
+            <div class="col">
+              <i class="fa-brands fa-github"></i> <a href="#"> View code</a>
+            </div>
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img src="images/weather.png" class="img-fluid" alt="Weather App" />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
