Created and styled the About Page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <h1>Nataliia Rekunenko</h1>
       <h2 class="mb-5">Frontend Developer, based in the Netherlands</h2>
       <div>
-        <a href="#" class="btn btn-branding">Contact me</a>
+        <a href="#" class="btn btn-branding shadow">Contact me</a>
       </div>
     </div>
     <p class="text-center mt-5 mb-5">
