--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
   <body>
     <div class="container about-hero">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-lg-6">
           <div class="about-hero-content">
             <h1>Hi, I am Nataliia Rekunenko</h1>
             <h2 class="mt-4 mb-4">
@@ -48,7 +48,7 @@
             <a href="#" class="btn btn-branding shadow">See my projects</a>
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-lg-6">
           <img
             src="images/nataliarekunenko.jpg"
             class="img-fluid shadow hero-picture"
