--- a/work.html
+++ b/work.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>About</title>
+    <title>Work</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -32,31 +32,11 @@
   </head>
   <body>
     <div class="container contant-container">
-      <div class="row">
-        <div class="col-lg-6">
-          <div class="content">
-            <h1>Hi, I am Nataliia Rekunenko</h1>
-            <h2 class="mt-4 mb-4">
-              Frontend Developer, based in the Netherlands
-            </h2>
-            <p class="mb-5">
-              For anyone who wants to start learning code, this workshop is very
-              interesting. You will be challenged with different exercises, and
-              everything is well explained, homework and deadlines are good for
-              keep focus
-            </p>
-            <a href="#" class="btn btn-branding shadow">See my projects</a>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <img
-            src="images/nataliarekunenko.jpg"
-            class="img-fluid shadow hero-picture"
-            alt=""
-          />
-        </div>
+      <div class="content">
+        <h1>Hi, I am Nataliia Rekunenko</h1>
       </div>
     </div>
+
     <a href="/index.html">Home</a>
   </body>
 </html>
