Added content to the Work Page

--- a/work.html
+++ b/work.html
@@ -33,7 +33,21 @@
   <body>
     <div class="container contant-container">
       <div class="content">
-        <h1>Hi, I am Nataliia Rekunenko</h1>
+        <h1>Take a look at what I've been working on!</h1>
+        <div class="row">
+          <div class="col-md-6">
+            <img src="images/weather.png" class="img-fluid mb-3 mt-5" alt="" />
+            <h3 class="text-center">Weather App</h3>
+            <p class="text-center text-muted">
+              Buid with HTML, CSS, Vanila JavaScript
+            </p>
+          </div>
+          <div class="col-md-6">
+            <img src="images/ukraine.png" class="img-fluid mb-3 mt-5" alt="" />
+            <h3 class="text-center">Ukraine Page</h3>
+            <p class="text-center text-muted">Buid with HTML and CSS</p>
+          </div>
+        </div>
       </div>
     </div>
 
