Created the Contact Page

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Work</title>
+    <title>Contact me</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -32,26 +32,21 @@
   </head>
   <body>
     <div class="container contant-container">
-      <div class="content">
-        <h1>Take a look at what I've been working on!</h1>
-        <div class="row">
-          <div class="col-md-6">
-            <img src="images/weather.png" class="img-fluid mb-3 mt-5" alt="" />
-            <h3 class="text-center">Weather App</h3>
-            <p class="text-center text-muted">
-              Buid with HTML, CSS, Vanila JavaScript
+        <div class="content text-center"></div>
+      <h1>Let's get in touch!</h1>
+      
+        <h3><i class="fa-solid fa-at"></i> Email</h3>
+        <p>
+            <a href="mailto:bortnyknatasha@gmail.com">
+            bortnyknatasha@gmail.com</a></p>
+        <h3><i class="fa-brands fa-linkedin"></i> LinkedIn</h3>
+        <p>
+            <a href="https://www.linkedin.com/in/nataliia-rekunenko/" target="_blank">Nataliia Rekunenko</a>
             </p>
-          </div>
-          <div class="col-md-6">
-            <img
-              src="images/ukraine.png"
-              class="img-fluid mb-3 mt-5 rounded"
-              alt=""
-            />
-            <h3 class="text-center">Ukraine Page</h3>
-            <p class="text-center text-muted">Buid with HTML and CSS</p>
-          </div>
-        </div>
+        <h3><i class="fa-brands fa-facebook"></i> Facebook</h3>
+        <p>
+            <a href="https://www.facebook.com/natasha.bortnik" target="_blank">Nataliia Rekunenko</a>
+        </p>
       </div>
     </div>
 
