--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Document</title>
+    <title>Homepage</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -33,6 +33,30 @@
   </head>
 
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/">
+          <p class="logo">
+            <i class="fa-solid fa-code"></i> <span>Portfolio</span>
+          </p>
+        </a>
+        <ul>
+          <li class="active">
+            <a href="/">Home</a>
+          </li>
+          <li>
+            <a href="/about.html">About</a>
+          </li>
+          <li>
+            <a href="/work.html">Projects</a>
+          </li>
+          <li>
+            <a href="/contact.html">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
     <div class="hero">
       <p>👋 Hi! I am</p>
       <h1>Nataliia Rekunenko</h1>
