--- a/index.html
+++ b/index.html
@@ -103,7 +103,35 @@
           <img src="images/weather.png" class="img-fluid" alt="Weather App" />
         </div>
       </div>
+      <footer>
+        <div class="contact-box d-flex justify-content-between">
+          <div>
+            <h4 class="text-start">Work Inquiry</h4>
+            <p class="text-muted text-start">
+              Let us work together and i will help you by all my best
+            </p>
+          </div>
+          <div>
+            <a href="" class="btn btn-branding ms-2">Contact me</a>
+          </div>
+        </div>
+        <a href="mailto:bortnyknatasha@gmail.com" class="email-link"
+          >bortnyknatasha@gmail.com</a
+        >
+        <div class="social-links">
+          <a href="https://github.com/NataliiaRe" target="_blank"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/nataliia-rekunenko/"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+          <a href="https://www.facebook.com/natasha.bortnik" target="_blank"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+        </div>
+      </footer>
     </div>
-    <a href="/about.html">About me</a>
   </body>
 </html>
