--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>Homepage</title>
+    <meta
+      name="description"
+      content="Nataliia Rekunenko is a frontend engineer, based in the Netherlands. Experienced with HTML, CSS, Java Script etc."
+    />
+    <title>Frontend Developer: Nataliia Rekunenko</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -42,16 +45,16 @@
         </a>
         <ul>
           <li class="active">
-            <a href="/">Home</a>
+            <a href="/" title="Homepage">Home</a>
           </li>
           <li>
-            <a href="/about.html">About</a>
+            <a href="/about.html" title="About me">About</a>
           </li>
           <li>
-            <a href="/work.html">Projects</a>
+            <a href="/work.html" title="Projects">Projects</a>
           </li>
           <li>
-            <a href="/contact.html">Contacts</a>
+            <a href="/contact.html" title="Contacts">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -65,28 +68,53 @@
         <a href="#" class="btn btn-branding shadow">Contact me</a>
       </div>
     </div>
+    <p class="text-center mt-5 mb-5">The Tech Stack</p>
+    <div class="container">
+      <ul class="img-tech d-flex justify-content-between">
+        <li>
+          <img src="images/tech/html.png" alt="" />
+        </li>
+        <li>
+          <img src="images/tech/CSS.png" alt="" />
+        </li>
+        <li>
+          <img src="images/tech/JS.png" alt="" />
+        </li>
+        <li>
+          <img src="images/tech/Bootstrap.png" alt="" />
+        </li>
+        <li>
+          <img src="images/tech/Flexbox.png" alt="" />
+        </li>
+        <li>
+          <img src="images/tech/Responsive.png" alt="" />
+        </li>
+        <li>
+          <img src="images/tech/VSCode.png" alt="" />
+        </li>
+        <li>
+          <img src="images/tech/API.png" alt="" />
+        </li>
+        <li>
+          <img src="images/tech/Hosting.png" alt="" />
+        </li>
+        <li>
+          <img src="images/tech/SEO.png" alt="" />
+        </li>
+        <li>
+          <img src="images/tech/GitHub.png" alt="" />
+        </li>
+      </ul>
+    </div>
+
     <p class="text-center mt-5 mb-5">
       Featured Project which my best projects be choice to show
     </p>
     <div class="container mb-5">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/ukraine.png" class="img-fluid" alt="Ukraine page" />
+          <img src="images/weather.png" class="img-fluid" alt="Weather App" />
         </div>
-        <div class="col">
-          <div class="project-description">
-            <h2 class="mb-5">Ukraine page</h2>
-            <p class="mb-3 text-muted">How i build this page</p>
-            <div class="col">
-              <i class="fa-solid fa-link"></i> <a href="#"> Life preview</a>
-            </div>
-            <div class="col">
-              <i class="fa-brands fa-github"></i> <a href="#"> View code</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row mb-5">
         <div class="col">
           <div class="project-description">
             <h2 class="mb-5">Weather App</h2>
@@ -99,8 +127,22 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Ukraine Page</h2>
+            <p class="mb-3 text-muted">How i build this page</p>
+            <div class="col">
+              <i class="fa-solid fa-link"></i> <a href="#"> Life preview</a>
+            </div>
+            <div class="col">
+              <i class="fa-brands fa-github"></i> <a href="#"> View code</a>
+            </div>
+          </div>
+        </div>
         <div class="col d-none d-lg-block">
-          <img src="images/weather.png" class="img-fluid" alt="Weather App" />
+          <img src="images/ukraine.png" class="img-fluid" alt="Ukraine page" />
         </div>
       </div>
       <footer>
