Corrected styling for the button

--- a/index.html
+++ b/index.html
@@ -173,6 +173,16 @@
             ><i class="fa-brands fa-facebook"></i
           ></a>
         </div>
+        <p class="mt-4">
+          Coded by
+          <a href="https://www.linkedin.com/in/nataliia-rekunenko/"
+            >Nataliia Rekunenko</a
+          >
+          | View code at
+          <a href="https://github.com/NataliiaRe/portfolio-project-final">
+            CitHub</a
+          >
+        </p>
       </footer>
     </div>
   </body>
