Added the menu and footer to all pages, made the site SEO-friendly

--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Let us work together on your goals. Contact me by Email, LinkedIn or Facebook. "
+    />
 
-    <title>Contact me</title>
+    <title>Contact details of Nataliia Rekunenko</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -31,25 +35,107 @@
     ></script>
   </head>
   <body>
-    <div class="container contant-container">
-        <div class="content text-center"></div>
-      <h1>Let's get in touch!</h1>
-      
-        <h3><i class="fa-solid fa-at"></i> Email</h3>
-        <p>
-            <a href="mailto:bortnyknatasha@gmail.com">
-            bortnyknatasha@gmail.com</a></p>
-        <h3><i class="fa-brands fa-linkedin"></i> LinkedIn</h3>
-        <p>
-            <a href="https://www.linkedin.com/in/nataliia-rekunenko/" target="_blank">Nataliia Rekunenko</a>
-            </p>
-        <h3><i class="fa-brands fa-facebook"></i> Facebook</h3>
-        <p>
-            <a href="https://www.facebook.com/natasha.bortnik" target="_blank">Nataliia Rekunenko</a>
-        </p>
-      </div>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/">
+          <p class="logo">
+            <i class="fa-solid fa-code"></i> <span>Portfolio</span>
+          </p>
+        </a>
+        <ul>
+          <li>
+            <a href="/" title="Homepage" target="_blank">Home</a>
+          </li>
+          <li>
+            <a href="/about.html" title="About me" target="_blank">About</a>
+          </li>
+          <li>
+            <a href="/work.html" title="Projects" target="_blank">Projects</a>
+          </li>
+          <li class="active">
+            <a href="/contact.html" title="Contacts" target="_blank"
+              >Contacts</a
+            >
+          </li>
+        </ul>
+      </nav>
     </div>
 
-    <a href="/index.html">Home</a>
+    <div class="container contant-container text-center">
+      <div class="content">
+        <h1 class="mb-5">Let's get in touch!</h1>
+
+        <h5><i class="fa-solid fa-at"></i> Email</h5>
+        <p>
+          <a href="mailto:bortnyknatasha@gmail.com" title="Email">
+            bortnyknatasha@gmail.com</a
+          >
+        </p>
+        <h5><i class="fa-brands fa-linkedin"></i> LinkedIn</h5>
+        <p>
+          <a
+            href="https://www.linkedin.com/in/nataliia-rekunenko/"
+            target="_blank"
+            title="LinkedIn"
+            >Nataliia Rekunenko</a
+          >
+        </p>
+        <h5><i class="fa-brands fa-facebook"></i> Facebook</h5>
+        <p>
+          <a
+            href="https://www.facebook.com/natasha.bortnik"
+            title="Facebook"
+            target="_blank"
+            >Nataliia Rekunenko</a
+          >
+        </p>
+      </div>
+      <footer>
+        <div class="contact-box d-flex justify-content-between">
+          <div>
+            <h4 class="text-start">Work Inquiry</h4>
+            <p class="text-muted text-start">
+              Let us work together and i will help you by all my best
+            </p>
+          </div>
+          <div>
+            <a
+              href="/contact.html"
+              class="btn btn-branding ms-2"
+              title="Contact me"
+              >Contact me</a
+            >
+          </div>
+        </div>
+
+        <div class="social-links">
+          <a href="https://github.com/NataliiaRe" title="GitHub" target="_blank"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/nataliia-rekunenko/"
+            title="Linkedin"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+          <a
+            href="https://www.facebook.com/natasha.bortnik"
+            target="_blank"
+            title="Facebook"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+        </div>
+        <p class="mt-4">
+          Coded by
+          <a href="https://www.linkedin.com/in/nataliia-rekunenko/"
+            >Nataliia Rekunenko</a
+          >
+          | View code at
+          <a href="https://github.com/NataliiaRe/portfolio-project-final">
+            CitHub</a
+          >
+        </p>
+      </footer>
+    </div>
   </body>
 </html>
