--- a/index.html
+++ b/index.html
@@ -45,16 +45,18 @@
         </a>
         <ul>
           <li class="active">
-            <a href="/" title="Homepage">Home</a>
+            <a href="/" title="Homepage" target="_blank">Home</a>
           </li>
           <li>
-            <a href="/about.html" title="About me">About</a>
+            <a href="/about.html" title="About me" target="_blank">About</a>
           </li>
           <li>
-            <a href="/work.html" title="Projects">Projects</a>
+            <a href="/work.html" title="Projects" target="_blank">Projects</a>
           </li>
           <li>
-            <a href="/contact.html" title="Contacts">Contacts</a>
+            <a href="/contact.html" title="Contacts" target="_blank"
+              >Contacts</a
+            >
           </li>
         </ul>
       </nav>
@@ -65,44 +67,50 @@
       <h1>Nataliia Rekunenko</h1>
       <h2 class="mb-5">Frontend Developer, based in the Netherlands</h2>
       <div>
-        <a href="#" class="btn btn-branding shadow">Contact me</a>
+        <a
+          href="/contact.html"
+          class="btn btn-branding shadow"
+          title="Contact me"
+          target="_blank"
+          >Contact me</a
+        >
       </div>
     </div>
     <p class="text-center mt-5 mb-5">The Tech Stack</p>
     <div class="container">
       <ul class="img-tech d-flex justify-content-between">
         <li>
-          <img src="images/tech/html.png" alt="" />
+          <img src="images/tech/html.png" alt="HTML" />
         </li>
         <li>
-          <img src="images/tech/CSS.png" alt="" />
+          <img src="images/tech/CSS.png" alt="CSS" />
         </li>
         <li>
-          <img src="images/tech/JS.png" alt="" />
+          <img src="images/tech/JS.png" alt="JavaScript" />
         </li>
         <li>
-          <img src="images/tech/Bootstrap.png" alt="" />
+          <img src="images/tech/Bootstrap.png" alt="Bootstrap" />
         </li>
         <li>
-          <img src="images/tech/Flexbox.png" alt="" />
+          <img src="images/tech/Flexbox.png" alt="Flexbox" />
         </li>
         <li>
-          <img src="images/tech/Responsive.png" alt="" />
+          <img src="images/tech/Responsive.png" alt="Responsive" />
         </li>
         <li>
-          <img src="images/tech/VSCode.png" alt="" />
+          <img src="images/tech/VSCode.png" alt="VSCode" />
         </li>
         <li>
-          <img src="images/tech/API.png" alt="" />
+          <img src="images/tech/API.png" alt="API" />
         </li>
         <li>
-          <img src="images/tech/Hosting.png" alt="" />
+          <img src="images/tech/Hosting.png" alt="Hosting" />
         </li>
         <li>
-          <img src="images/tech/SEO.png" alt="" />
+          <img src="images/tech/SEO.png" alt="SEO" />
         </li>
         <li>
-          <img src="images/tech/GitHub.png" alt="" />
+          <img src="images/tech/GitHub.png" alt="GitHub" />
         </li>
       </ul>
     </div>
@@ -118,12 +126,33 @@
         <div class="col">
           <div class="project-description">
             <h2 class="mb-5">Weather App</h2>
-            <p class="mb-3 text-muted">How i build this app</p>
+            <p class="mb-3 text-muted">
+              The Weather App was built using the advanced technologies such as
+              HTML, CSS, and Bootstrap. JavaScript techniques (ES6) made the
+              application interactive. The Weather App shows the real weather
+              for the current location of user and are able to search for a
+              weather condition and a weather forecast in any other city, using
+              API.
+            </p>
             <div class="col">
-              <i class="fa-solid fa-link"></i> <a href="#"> Life preview</a>
+              <i class="fa-solid fa-link"></i>
+              <a
+                href="https://relaxed-hamster-e6d8ca.netlify.app/"
+                title="life preview"
+                target="_blank"
+              >
+                Life preview</a
+              >
             </div>
             <div class="col">
-              <i class="fa-brands fa-github"></i> <a href="#"> View code</a>
+              <i class="fa-brands fa-github"></i>
+              <a
+                href="https://github.com/NataliiaRe/Vanilla-Weather-App"
+                title="View code"
+                target="_blank"
+              >
+                View code</a
+              >
             </div>
           </div>
         </div>
@@ -132,13 +161,20 @@
         <div class="col">
           <div class="project-description">
             <h2 class="mb-5">Ukraine Page</h2>
-            <p class="mb-3 text-muted">How i build this page</p>
+            <p class="mb-3 text-muted">
+              The Ukrainan landing page was build by using such frontend
+              technologies as HTML and JavaScript. Styled and designed by CSS.
+            </p>
             <div class="col">
-              <i class="fa-solid fa-link"></i> <a href="#"> Life preview</a>
+              <i class="fa-solid fa-link"></i>
+              <a
+                href="https://www.shecodes.io/workshops/shecodes-basics-7949bf94-9bab-4f69-b7ec-84552c72b8ff/projects/860775"
+                title="life preview"
+              >
+                Life preview</a
+              >
             </div>
-            <div class="col">
-              <i class="fa-brands fa-github"></i> <a href="#"> View code</a>
-            </div>
+            <div class="col"></div>
           </div>
         </div>
         <div class="col d-none d-lg-block">
@@ -154,22 +190,29 @@
             </p>
           </div>
           <div>
-            <a href="" class="btn btn-branding ms-2">Contact me</a>
+            <a
+              href="/contact.html"
+              class="btn btn-branding ms-2"
+              title="Contact me"
+              >Contact me</a
+            >
           </div>
         </div>
-        <a href="mailto:bortnyknatasha@gmail.com" class="email-link"
-          >bortnyknatasha@gmail.com</a
-        >
+
         <div class="social-links">
-          <a href="https://github.com/NataliiaRe" target="_blank"
+          <a href="https://github.com/NataliiaRe" title="GitHub" target="_blank"
             ><i class="fa-brands fa-github"></i
           ></a>
           <a
             href="https://www.linkedin.com/in/nataliia-rekunenko/"
+            title="Linkedin"
             target="_blank"
             ><i class="fa-brands fa-linkedin"></i
           ></a>
-          <a href="https://www.facebook.com/natasha.bortnik" target="_blank"
+          <a
+            href="https://www.facebook.com/natasha.bortnik"
+            target="_blank"
+            title="Facebook"
             ><i class="fa-brands fa-facebook"></i
           ></a>
         </div>
