--- a/about.html
+++ b/about.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>About</title>
+    <meta
+      name="description"
+      content="Nataliia Rekunenko: projects and experience. Contact me by pressing the button below."
+    />
+    <title>About Nataliia Rekunenko</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -31,32 +34,113 @@
     ></script>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/">
+          <p class="logo">
+            <i class="fa-solid fa-code"></i> <span>Portfolio</span>
+          </p>
+        </a>
+        <ul>
+          <li>
+            <a href="/" title="Homepage" target="_blank">Home</a>
+          </li>
+          <li class="active">
+            <a href="/about.html" title="About me" target="_blank">About</a>
+          </li>
+          <li>
+            <a href="/work.html" title="Projects" target="_blank">Projects</a>
+          </li>
+          <li>
+            <a href="/contact.html" title="Contacts" target="_blank"
+              >Contacts</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </div>
+
     <div class="container contant-container">
       <div class="row">
         <div class="col-lg-6">
           <div class="content">
             <h1>Hi, I am Nataliia Rekunenko</h1>
-            <h2 class="mt-4 mb-4">
+            <h2 class="mt-2 mb-4">
               Frontend Developer, based in the Netherlands
             </h2>
-            <p class="mb-5">
-              For anyone who wants to start learning code, this workshop is very
-              interesting. You will be challenged with different exercises, and
-              everything is well explained, homework and deadlines are good for
-              keep focus
+            <p>
+              Enthusiastic, self-driven and detail-oriented Frontend Developer.
+              Skilled in HTML, CSS, JavaScript, API technologies, Bootstrap,
+              SEO, building and hosting responsive web-sites.
             </p>
-            <a href="#" class="btn btn-branding shadow">See my projects</a>
+            <p>Responsible and perseverance.</p>
+            <p class="mb-5">
+              Previously - experienced enterprising journalist with strong
+              copywriting skills. Together with a team improved sites design and
+              increased web-sites traffic by 20-100%.
+            </p>
+            <a
+              href="/work.html"
+              class="btn btn-branding shadow"
+              title="My Projects"
+              >See my projects</a
+            >
           </div>
         </div>
         <div class="col-lg-6">
           <img
             src="images/nataliarekunenko.jpg"
-            class="img-fluid shadow hero-picture"
-            alt=""
+            class="img-fluid shadow hero-picture mt-3"
+            alt="Nataliia Rekunenko"
           />
         </div>
       </div>
+      <footer>
+        <div class="contact-box d-flex justify-content-between">
+          <div>
+            <h4 class="text-start">Work Inquiry</h4>
+            <p class="text-muted text-start">
+              Let us work together and i will help you by all my best
+            </p>
+          </div>
+          <div>
+            <a
+              href="/contact.html"
+              class="btn btn-branding ms-2"
+              title="Contact me"
+              >Contact me</a
+            >
+          </div>
+        </div>
+
+        <div class="social-links">
+          <a href="https://github.com/NataliiaRe" title="GitHub" target="_blank"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/nataliia-rekunenko/"
+            title="Linkedin"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+          <a
+            href="https://www.facebook.com/natasha.bortnik"
+            target="_blank"
+            title="Facebook"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+        </div>
+        <p class="mt-4">
+          Coded by
+          <a href="https://www.linkedin.com/in/nataliia-rekunenko/"
+            >Nataliia Rekunenko</a
+          >
+          | View code at
+          <a href="https://github.com/NataliiaRe/portfolio-project-final">
+            CitHub</a
+          >
+        </p>
+      </footer>
     </div>
-    <a href="/index.html">Home</a>
   </body>
 </html>
