--- a/work.html
+++ b/work.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>Work</title>
+    <meta
+      name="description"
+      content="Examples of created web-pages,
+      multypages web-sites and aplications. Contact me by pressing the button below."
+    />
+    <title>Nataliia Rekunenko: Working projects</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -31,12 +35,42 @@
     ></script>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/">
+          <p class="logo">
+            <i class="fa-solid fa-code"></i> <span>Portfolio</span>
+          </p>
+        </a>
+        <ul>
+          <li>
+            <a href="/" title="Homepage" target="_blank">Home</a>
+          </li>
+          <li>
+            <a href="/about.html" title="About me" target="_blank">About</a>
+          </li>
+          <li class="active">
+            <a href="/work.html" title="Projects" target="_blank">Projects</a>
+          </li>
+          <li>
+            <a href="/contact.html" title="Contacts" target="_blank"
+              >Contacts</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </div>
+
     <div class="container contant-container">
       <div class="content">
         <h1>Take a look at what I've been working on!</h1>
         <div class="row">
           <div class="col-md-6">
-            <img src="images/weather.png" class="img-fluid mb-3 mt-5" alt="" />
+            <img
+              src="images/weather.png"
+              class="img-fluid mb-3 mt-5"
+              alt="Weather App"
+            />
             <h3 class="text-center">Weather App</h3>
             <p class="text-center text-muted">
               Buid with HTML, CSS, Vanila JavaScript
@@ -46,15 +80,59 @@
             <img
               src="images/ukraine.png"
               class="img-fluid mb-3 mt-5 rounded"
-              alt=""
+              alt="Ukraine Page"
             />
             <h3 class="text-center">Ukraine Page</h3>
             <p class="text-center text-muted">Buid with HTML and CSS</p>
           </div>
         </div>
       </div>
-    </div>
+      <footer>
+        <div class="contact-box d-flex justify-content-between">
+          <div>
+            <h4 class="text-start">Work Inquiry</h4>
+            <p class="text-muted text-start">
+              Let us work together and i will help you by all my best
+            </p>
+          </div>
+          <div>
+            <a
+              href="/contact.html"
+              class="btn btn-branding ms-2"
+              title="Contact me"
+              >Contact me</a
+            >
+          </div>
+        </div>
 
-    <a href="/index.html">Home</a>
+        <div class="social-links">
+          <a href="https://github.com/NataliiaRe" title="GitHub" target="_blank"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/nataliia-rekunenko/"
+            title="Linkedin"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+          <a
+            href="https://www.facebook.com/natasha.bortnik"
+            target="_blank"
+            title="Facebook"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+        </div>
+        <p class="mt-4">
+          Coded by
+          <a href="https://www.linkedin.com/in/nataliia-rekunenko/"
+            >Nataliia Rekunenko</a
+          >
+          | View code at
+          <a href="https://github.com/NataliiaRe/portfolio-project-final">
+            CitHub</a
+          >
+        </p>
+      </footer>
+    </div>
   </body>
 </html>
