--- a/work.html
+++ b/work.html
@@ -63,7 +63,7 @@
 
     <div class="container contant-container">
       <div class="content">
-        <h1>Take a look at what I've been working on!</h1>
+        <h1 class="mb-4">Take a look at my last projects!</h1>
         <div class="row">
           <div class="col-md-6">
             <img
@@ -73,7 +73,7 @@
             />
             <h3 class="text-center">Weather App</h3>
             <p class="text-center text-muted">
-              Buid with HTML, CSS, Vanila JavaScript
+              Built with HTML, CSS, Vanila JavaScript
             </p>
           </div>
           <div class="col-md-6">
@@ -83,10 +83,13 @@
               alt="Ukraine Page"
             />
             <h3 class="text-center">Ukraine Page</h3>
-            <p class="text-center text-muted">Buid with HTML and CSS</p>
+            <p class="text-center text-muted">
+              built with HTML, CSS, JavaScript
+            </p>
           </div>
         </div>
       </div>
+
       <footer>
         <div class="contact-box d-flex justify-content-between">
           <div>
