--- a/work.html
+++ b/work.html
@@ -68,7 +68,7 @@
           <div class="col-md-6">
             <img
               src="images/weather.png"
-              class="img-fluid mb-3 mt-5"
+              class="img-fluid mb-3 mt-5 project-img"
               alt="Weather App"
             />
             <h3 class="text-center">Weather App</h3>
@@ -79,7 +79,7 @@
           <div class="col-md-6">
             <img
               src="images/ukraine.png"
-              class="img-fluid mb-3 mt-5 rounded"
+              class="img-fluid mb-3 mt-5 rounded project-img"
               alt="Ukraine Page"
             />
             <h3 class="text-center">Ukraine Page</h3>
