--- a/work.html
+++ b/work.html
@@ -44,18 +44,16 @@
         </a>
         <ul>
           <li>
-            <a href="/" title="Homepage" target="_blank">Home</a>
+            <a href="/" title="Homepage">Home</a>
           </li>
           <li>
-            <a href="/about.html" title="About me" target="_blank">About</a>
+            <a href="/about.html" title="About me">About</a>
           </li>
           <li class="active">
-            <a href="/work.html" title="Projects" target="_blank">Projects</a>
+            <a href="/work.html" title="Projects">Projects</a>
           </li>
           <li>
-            <a href="/contact.html" title="Contacts" target="_blank"
-              >Contacts</a
-            >
+            <a href="/contact.html" title="Contacts">Contacts</a>
           </li>
         </ul>
       </nav>
