Added links to the project page

--- a/about.html
+++ b/about.html
@@ -130,11 +130,16 @@
         </div>
         <p class="mt-4">
           Coded by
-          <a href="https://www.linkedin.com/in/nataliia-rekunenko/"
+          <a
+            href="https://www.linkedin.com/in/nataliia-rekunenko/"
+            target="_blank"
             >Nataliia Rekunenko</a
           >
           | View code at
-          <a href="https://github.com/NataliiaRe/portfolio-project-final">
+          <a
+            href="https://github.com/NataliiaRe/portfolio-project-final"
+            target="_blank"
+          >
             CitHub</a
           >
         </p>
