--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
           href="/contact.html"
           class="btn btn-branding shadow"
           title="Contact me"
-          target="_blank"
           >Contact me</a
         >
       </div>
@@ -168,6 +167,7 @@
               <a
                 href="https://www.shecodes.io/workshops/shecodes-basics-7949bf94-9bab-4f69-b7ec-84552c72b8ff/projects/860775"
                 title="life preview"
+                target="_blank"
               >
                 Life preview</a
               >
@@ -216,11 +216,16 @@
         </div>
         <p class="mt-4">
           Coded by
-          <a href="https://www.linkedin.com/in/nataliia-rekunenko/"
+          <a
+            href="https://www.linkedin.com/in/nataliia-rekunenko/"
+            target="_blank"
             >Nataliia Rekunenko</a
           >
           | View code at
-          <a href="https://github.com/NataliiaRe/portfolio-project-final">
+          <a
+            href="https://github.com/NataliiaRe/portfolio-project-final"
+            target="_blank"
+          >
             CitHub</a
           >
         </p>
