--- a/work.html
+++ b/work.html
@@ -73,6 +73,26 @@
             <p class="text-center text-muted">
               Built with HTML, CSS, Vanila JavaScript
             </p>
+            <div class="col-6">
+              <i class="fa-solid fa-link"></i>
+              <a
+                href="https://relaxed-hamster-e6d8ca.netlify.app/"
+                title="life preview"
+                target="_blank"
+              >
+                Life preview</a
+              >
+            </div>
+            <div class="col-6">
+              <i class="fa-brands fa-github"></i>
+              <a
+                href="https://github.com/NataliiaRe/Vanilla-Weather-App"
+                title="View code"
+                target="_blank"
+              >
+                View code</a
+              >
+            </div>
           </div>
           <div class="col-md-6">
             <img
@@ -84,6 +104,17 @@
             <p class="text-center text-muted">
               built with HTML, CSS, JavaScript
             </p>
+            <div class="col">
+              <i class="fa-solid fa-link"></i>
+              <a
+                href="https://www.shecodes.io/workshops/shecodes-basics-7949bf94-9bab-4f69-b7ec-84552c72b8ff/projects/860775"
+                title="life preview"
+                target="_blank"
+              >
+                Life preview</a
+              >
+            </div>
+            <div class="col"></div>
           </div>
         </div>
       </div>
@@ -125,11 +156,16 @@
         </div>
         <p class="mt-4">
           Coded by
-          <a href="https://www.linkedin.com/in/nataliia-rekunenko/"
+          <a
+            href="https://www.linkedin.com/in/nataliia-rekunenko/"
+            target="_blank"
             >Nataliia Rekunenko</a
           >
           | View code at
-          <a href="https://github.com/NataliiaRe/portfolio-project-final">
+          <a
+            href="https://github.com/NataliiaRe/portfolio-project-final"
+            target="_blank"
+          >
             CitHub</a
           >
         </p>
